Custom scroll and textarea were added

--- a/index.html
+++ b/index.html
@@ -41,21 +41,29 @@
                 type="text" 
                 name="name" 
                 placeholder="Имя*"
+                required
                 class="form-container__form-input"
               >
               <input 
                 type="tel" 
                 name="phone" 
                 placeholder="Телефон*"
+                required
                 class="form-container__form-input"
               >
               <input 
                 type="email" 
                 name="email" 
-                placeholder="E-mail*"
+                placeholder="E-mail"
                 class="form-container__form-input"
               >
-              <button type="button" class="form-container__form-button button">получить предложение</button>
+              <textarea 
+                type="text" 
+                name="details" 
+                placeholder="Опишите, какие работы Вас интересуют"
+                class="form-container__form-input form-container__form-text"
+              ></textarea>
+              <button type="button" class="form-container__form-button button">отправить заявку</button>
             </form>
           </div>
         </div>
